Translate2 - Org/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>if( ISNULL(Birthdate), &quot;&quot;, 
TEXT( 
if(YEAR(TODAY())-YEAR(Birthdate)&gt;0, 
if(MONTH(TODAY())-MONTH(Birthdate)&lt;0, 
YEAR(TODAY())-YEAR(Birthdate)-1, 
if(MONTH(TODAY())-MONTH(Birthdate)&gt;0, 
YEAR(TODAY())-YEAR(Birthdate), 
if(DAY(TODAY())-DAY(Birthdate)&lt;0, 
YEAR(TODAY())-YEAR(Birthdate)-1, 
YEAR(TODAY())-YEAR(Birthdate) 
) 
) 
), 
0 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>誕生日から現在の年齢を計算します</inlineHelpText>
        <label>現在の年齢</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>アレルギー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicantName__c</fullName>
        <description>予約連絡者</description>
        <label>申込者</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantPhone__c</fullName>
        <label>申込者電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bridal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ブライダル</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyNameCal__c</fullName>
        <formula>Account.Name</formula>
        <label>取引先会社名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <description>C：法人、P：個人、KH：候補顧客、UG：UG</description>
        <inlineHelpText>C：法人、P：個人、KH：候補顧客、UG：UG</inlineHelpText>
        <label>顧客区分</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ダイレクトメール許可を得ている場合、チェックを入れる。</description>
        <inlineHelpText>ダイレクトメール許可を得ている場合、チェックを入れる。</inlineHelpText>
        <label>ＤＭ許可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True: 削除</description>
        <label>削除区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DetailedAllergy__c</fullName>
        <label>アレルギーの内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>メール２</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>内線</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax2__c</fullName>
        <label>Fax２</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>コメント</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <inlineHelpText>10桁の顧客ID</inlineHelpText>
        <label>ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KanaName1__c</fullName>
        <inlineHelpText>半角カナを入力してください。</inlineHelpText>
        <label>カナ１</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanaName2__c</fullName>
        <label>カナ２</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Katakana__c</fullName>
        <label>ひらがな</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_statying_date__c</fullName>
        <label>最終利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MarriyStaLst__c</fullName>
        <label>婚姻区分</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>会員のお客様にチェックを入れる</description>
        <inlineHelpText>会員のお客様にチェックを入れる</inlineHelpText>
        <label>会員</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo1__c</fullName>
        <label>メモー１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memo2__c</fullName>
        <label>メモー２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memo3__c</fullName>
        <label>メモー３</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>名称１</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>名称２</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <label>名称３</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgCreateDate__c</fullName>
        <label>作成日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgCreateUser__c</fullName>
        <label>登録担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgUpdateDate__c</fullName>
        <label>更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgUpdateUser__c</fullName>
        <label>更新担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentContactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親顧客№</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>ParentContactRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>電話2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RANK__c</fullName>
        <inlineHelpText>顧客ランク</inlineHelpText>
        <label>RANK</label>
        <picklist>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RyakuNm1__c</fullName>
        <label>略称１</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RyakuNm2__c</fullName>
        <label>略称２</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmokeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックすると、喫煙です</inlineHelpText>
        <label>喫煙区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spend_Amount__c</fullName>
        <label>利用金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Used_number_of_times__c</fullName>
        <description>お客様のご利用回数</description>
        <inlineHelpText>お客様のご利用回数</inlineHelpText>
        <label>利用回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeddingAnniversary__c</fullName>
        <label>結婚記念日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男性</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>女性</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>